[package]
name = "trust"
version = "0.1.0"
authors = ["DarioRoman01 <darioroman2001@gmail.com.>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse = "0.9"

[lib]
name = "trust"

[[bin]]
name = "trust"